[gd_scene load_steps=5 format=3 uid="uid://bd0t3aoaevkyw"]

[ext_resource type="Script" path="res://Scenes/Experience/Experience.gd" id="1_up6ha"]
[ext_resource type="Texture2D" uid="uid://dvo4y5vj5mvgc" path="res://Sprites/Other/Exp-1.png.png" id="2_gy3gi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7iodp"]
radius = 112.018

[sub_resource type="CircleShape2D" id="CircleShape2D_pnwvu"]
radius = 7.0

[node name="Experience" type="Area2D"]
scale = Vector2(0.75, 0.75)
collision_layer = 8
collision_mask = 16
script = ExtResource("1_up6ha")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("2_gy3gi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7iodp")

[node name="Destroy_Ring" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Destroy_Ring"]
shape = SubResource("CircleShape2D_pnwvu")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
